--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Harmony2"
         tools:targetApi="31">
         <activity
+            android:name=".Feedback"
+            android:exported="false" />
+        <activity
+            android:name=".AboutUs"
+            android:exported="false" />
+        <activity
             android:name=".Launcher"
             android:exported="true">
             <intent-filter>
@@ -32,8 +38,7 @@
             android:exported="false" />
         <activity
             android:name=".LogIn"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
     </application>
 
 </manifest>
